app/assets/stylesheets/layout/_navbar.scss
/* Main class */
.navbar-socialive {
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
  background: $gray-light;
  transition: all 0.3s ease;
  display: flex;
  height: 70px;
  padding: 0px 20px;
  align-items: center;
  justify-content: space-between;
  z-index:100;
}

.navbar-socialive-categories {
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
  background: $gray-light;
  transition: all 0.3s ease;
  display: flex;
  height: 45px;
  padding: 0px 20px;
  align-items: center;
  justify-content: space-between;
  transition: top 0.3s ease-in-out;
  z-index:100;
}

.navbar-socialive-categories-livestream {
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
  background: $gray-light;
  transition: all 0.3s ease;
  display: flex;
  height: 45px;
  padding: 0px 20px;
  align-items: center;
  justify-content: space-between;
  transition: top 0.3s ease-in-out;
  z-index:100;
}

/* Optional class to fix the navbar on top */
.navbar-socialive-fixed {
  position: fixed;
  left: 0px;
  top: 0px;
  z-index: 1000;
  width: 100%;
  margin-top:70px;
}

.navbar-socialive-fixed-ontop {
  position: fixed;
  left: 0px;
  top: 0px;
  z-index: 1000;
  width: 100%;
}

/* Navbar logo */
.navbar-socialive-brand img {
  width: 50px;
}

/* Navbar left section (with logo, search form) */
.navbar-socialive-left {
  display: flex;
  align-items: center;
  justify-content: flext-start;
}

/* Navbar right section (with form, links, button) */
.navbar-socialive-right {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

/* Navbar item */
.navbar-socialive-item {
  flex: 0 1 auto;
  cursor: pointer;
  padding: 0 20px;
}

.pulse-container {
  position: relative;
  margin-right: 10px;
}

.pulse-livestream {
  position: absolute;
  top: -14px;
  left: -17px;
}

.blink_me {
    -webkit-animation-name: blinker;
    -webkit-animation-duration: 3s;
    -webkit-animation-timing-function: linear;
    -webkit-animation-iteration-count: infinite;

    -moz-animation-name: blinker;
    -moz-animation-duration: 3s;
    -moz-animation-timing-function: linear;
    -moz-animation-iteration-count: infinite;

    animation-name: blinker;
    animation-duration: 3s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
}

@-moz-keyframes blinker {
    0% { opacity: 1.0; }
    50% { opacity: 0.0; }
    100% { opacity: 1.0; }
}

@-webkit-keyframes blinker {
    0% { opacity: 1.0; }
    50% { opacity: 0.0; }
    100% { opacity: 1.0; }
}

@keyframes blinker {
    0% { opacity: 1.0; }
    50% { opacity: 0.0; }
    100% { opacity: 1.0; }
}

.navbar-socialive-item:hover{
  text-decoration:none;
  color: $gunmetal;
}


/* Navbar standard link */
.navbar-socialive-link {
  color: #616668;
  font-size: 16px;
}
.navbar-socialive-link:hover {
  color: $gunmetal;
  text-decoration: none;
}

/* Navbar right button */
.navbar-socialive-button {
  margin-left: 10px;
  padding: 0 20px;
  border-radius: 5px;
  line-height: 25px;
  background-color: $brand-color;
  color: white;
  font-size: 14px;
  border: px solid $brand-color;
}

.navbar-socialive-button:hover {
  color: $gunmetal;
  background: $brand-color;
  border-color: $gunmetal;
}

/* Navbar search form */
.navbar-socialive-search {
  flex: 0 1 300px;
  display: flex;
  justify-content: flex-end;
  padding: 0 10px;
  position: relative;
  height:35px;
}

.navbar-socialive-search-btn {
  line-height: 40px;
  color: $gunmetal;
  border: none;
  background: transparent;
  position: absolute;
  align-items: center;
  right: 20px;
  top: -4px;
  z-index: 1;
}

.navbar-socialive-search-btn:focus {
  outline-color: transparent;
  outline-style: none;
}

.nav-head input[type="text"] {
    background: $gray-dark;
    border: 0 none;
    color: #d7d7d7;
    width:30px;
    padding: 6px 15px 6px 35px;
    border-radius: 20px;
    margin:3px 12px;
    transition: all 0.7s ease 0s;
}

.nav-head input[type="text"]:focus {
    background:#ccc;
    color:$gunmetal;
    width: 220px;
    margin:3px 12px;
    outline: none;
}


/* Navbar dropdown menu */
.navbar-socialive-dropdown-menu {
  margin-top: 15px;
  box-shadow: 1px 1px 4px #E6E6E6;
  border-color: #E6E6E6;
  z-index:10000 !important;
}

.navbar-socialive-dropdown-menu li > a {
  transition: color 0.3s ease;
  font-weight: lighter !important;
  color: #999999 !important;
  font-size: 15px !important;
  line-height: 22px !important;
  padding: 10px 20px;
}

.navbar-socialive-dropdown-menu li > a:hover {
  background: transparent !important;
  color: black !important;
}

.navbar-socialive-dropdown-menu:before {
  content: ' ';
  height: 10px;
  width: 10px;
  position: absolute;
  right: 10px;
  top: -6px;
  background-color: white;
  transform: rotate(45deg);
  border-left: 1px solid #E6E6E6;
  border-top: 1px solid #E6E6E6;
}

.navbar-notify-item {
    position:relative;
    display:inline-block;
}

.notify-badge{
    position: absolute;
    left:25px;
    top:-8px;
    background:black;
    text-align: center;
    border-radius: 30px 30px 30px 30px;
    color:white;
    padding:5px 10px;
    font-size:7px;
}

.nav-head {
    background: #f5b335;
    height: 70px;
    position: fixed;
    top: 0;
    transition: top 0.3s ease-in-out;
    width: 100%;
    z-index:1000;
}

.nav-up {
    top: -70px;
}

.balance-div {
  margin-right: 10px;
}

.balance-div img {
  margin-right: 10px;
  margin-top: -3px;
}

.balance-div:hover a {
  text-decoration: none;
}

